option java_package = "com.dsky.netty.pvpser.protocode";
option java_outer_classname = "PVPSerProtocol";

message SocketRequest {
  required int32 number = 1;
  required string userId = 2;
  optional string roomId = 3;
  optional int32 sequence = 4;
  optional string reserve = 5;
  optional string gateway = 6;
  optional string requestMsg = 7;
}

message SocketResponse {
  required int32 number = 1;
  optional string userId = 2;
  optional string roomId = 3;
  optional int32 sequence = 4;
  optional string reserve = 5;
  optional string gateway = 6;
  optional string responseMsg = 7;
}
